k8s-deployments/product-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: mern-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product-container
          image: 466825169909.dkr.ecr.ap-south-1.amazonaws.com/product-service:9c3aab4733e6c1d43d7327b4646d68565f5871cc
          ports:
            - containerPort: 5003
