k8s-deployments/product-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: mern-dev
spec:
  selector:
    app: product
  ports:
    - port: 5002
      targetPort: 5002
  type: ClusterIP
